--- a/raven-stormwing/index.html
+++ b/raven-stormwing/index.html
@@ -7,7 +7,10 @@
   <style>
     body {
       margin: 0;
-      background: #000;
+    background:
+  linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.75)),
+  url("RSBG.jpg") center / cover no-repeat fixed;
+
       color: #eee;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
       text-align: center;
