--- a/raven-stormwing/index.html
+++ b/raven-stormwing/index.html
@@ -4,29 +4,36 @@
   <meta charset="UTF-8">
   <title>Raven Stormwing</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body {
       margin: 0;
-    background:
-  linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.75)),
-  url("RSBG.jpg") center / cover no-repeat fixed;
-
+      background:
+        linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.75)),
+        url("RSBG.jpg") center / cover no-repeat fixed;
       color: #eee;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
       text-align: center;
       padding: 2rem 1rem;
     }
+
+    h1 {
+      text-shadow: 0 0 8px rgba(246, 194, 107, 0.25);
+    }
+
     a {
       color: #f6c26b;
       text-decoration: none;
       font-weight: 600;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     .block {
       max-width: 700px;
-      margin: 0 auto 3rem;
+      margin: 0 auto 4rem;
     }
   </style>
 </head>
@@ -58,4 +65,5 @@
 
 </body>
 </html>
+
 
