--- a/raven-stormwing/index.html
+++ b/raven-stormwing/index.html
@@ -47,18 +47,18 @@
 
   <div class="block">
     <h2>Published Works</h2>
-    <p><a href="https://www.amazon.com/" target="_blank">Amazon</a></p>
-    <p><a href="https://www.royalroad.com/" target="_blank">Royal Road</a></p>
+    <p><a href="https://a.co/d/3TR0Fdx" target="_blank">Amazon</a></p>
+    <p><a href="https://www.royalroad.com/profile/52316/fictions" target="_blank">Royal Road</a></p>
   </div>
 
   <div class="block">
     <h2>Blog</h2>
-    <p><a href="https://substack.com/" target="_blank">Substack</a></p>
+    <p><a href="https://substack.com/@ravenstormwing" target="_blank">Substack</a></p>
   </div>
 
   <div class="block">
     <h2>Music</h2>
-    <p><a href="https://open.spotify.com/" target="_blank">Spotify – Raven’s Call</a></p>
+    <p><a href="https://open.spotify.com/artist/5E1lDE3W7Qp8ij7Owg8p3R?si=brMM3wmYQYuGsXIfg0wrIA" target="_blank">Spotify – Raven’s Call</a></p>
   </div>
 
   <p><a href="../">← Back to Dreamcaster Productions</a></p>
