--- a/raven-stormwing/index.html
+++ b/raven-stormwing/index.html
@@ -61,6 +61,15 @@
     <p><a href="https://open.spotify.com/artist/5E1lDE3W7Qp8ij7Owg8p3R?si=brMM3wmYQYuGsXIfg0wrIA" target="_blank">Spotify – Raven’s Call</a></p>
   </div>
 
+  <div class="block">
+  <h2>Social</h2>
+  <p>
+    <a href="https://www.facebook.com/raven.stormwing" target="_blank">
+      Facebook
+    </a>
+  </p>
+</div>
+
   <p><a href="../">← Back to Dreamcaster Productions</a></p>
 
 </body>
