--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
       font-weight: 600;
     }
 
+a:visited {
+  color: #d9b25f; /* slightly muted gold, still readable */
+}
+    
     a:hover {
       text-decoration: underline;
     }
