--- a/index.html
+++ b/index.html
@@ -6,56 +6,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    body {
-      margin: 0;
-      background: #000;
-      color: #eee;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      text-align: center;
-    }
+  body {
+    margin: 0;
+    background: #000;
+    color: #eee;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    text-align: center;
+  }
 
   .hero {
-  height: 55vh;
-  max-height: 600px;
-  min-height: 320px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1.5rem 1rem;
-  background: radial-gradient(circle at center, #111 0%, #000 70%);
-}
+    height: 55vh;
+    max-height: 600px;
+    min-height: 320px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem 1rem;
+    background: radial-gradient(circle at center, #111 0%, #000 70%);
+  }
 
-.hero img {
-  max-width: min(750px, 88vw);
-  height: auto;
-  display: block;
-}
-
-}
-
+  .hero img {
+    max-width: min(750px, 88vw);
+    height: auto;
+    display: block;
+  }
 
   .content {
-  padding: 2.5rem 1rem 4rem;
-  font-size: 1.1rem;
-}
+    padding: 2.5rem 1rem 4rem;
+    font-size: 1.1rem;
+  }
 
-.content h2 {
-  margin-top: 2rem;
-}
+  .content h2 {
+    margin-top: 2rem;
+  }
 
-      color: #f6c26b;
-      text-decoration: none;
-      font-weight: 600;
-    }
+  a,
+  a:link,
+  a:visited {
+    color: #f6c26b;
+    text-decoration: none;
+    font-weight: 600;
+  }
 
-a:visited {
-  color: #d9b25f; /* slightly muted gold, still readable */
-}
-    
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  a:hover,
+  a:focus {
+    color: #ffd27d;
+    text-decoration: underline;
+  }
+
+  a:active {
+    color: #ffe7a3;
+  }
+</style>
+
 </head>
 
 <body>
