--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 
   <section class="content">
     <p>Stories. Music. Worlds Beyond.</p>
+    
+    <h2>Gallery</h2>
+<p><a href="gallery/">AI Art Gallery</a></p>
 
     <h2>Portfolios</h2>
     <p><a href="raven-stormwing/">Raven Stormwing</a></p>
