--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <p>Stories. Music. Worlds Beyond.</p>
     
     <h2>Gallery</h2>
-<p><a href="gallery/">AI Art Gallery</a></p>
+<p><a href="gallery/">Artwork & Concepts</a></p>
 
     <h2>Portfolios</h2>
     <p><a href="raven-stormwing/">Raven Stormwing</a></p>
