--- a/index.html
+++ b/index.html
@@ -63,8 +63,12 @@
 
 <body>
 
-  <section class="hero">
-    <img src="logo.png" alt="Dreamcaster Productions">
+ <section class="hero">
+  <div class="hero-inner">
+    <img src="logo.png" alt="Dreamcaster">
+    <div class="subtitle">Productions</div>
+  </div>
+</section>
 
   </section>
 
