--- a/raven-stormwing/index.html
+++ b/raven-stormwing/index.html
@@ -56,10 +56,19 @@
     <p><a href="https://substack.com/@ravenstormwing" target="_blank">Substack</a></p>
   </div>
 
-  <div class="block">
-    <h2>Music</h2>
-    <p><a href="https://open.spotify.com/artist/5E1lDE3W7Qp8ij7Owg8p3R?si=brMM3wmYQYuGsXIfg0wrIA" target="_blank">Spotify – Raven’s Call</a></p>
-  </div>
+ <div class="links">
+   <h2>Media</h2>
+ <p>
+  <a href="https://open.spotify.com/artist/5E11DE3W7Qp8j7Owg8p3R?si=It-jsDMZTse7detR-buWlA" target="_blank">
+    🎵 Spotify
+  </a> |
+  <a href="https://www.youtube.com/@RavenStormwing/videos" target="_blank">
+    ▶️ YouTube
+  </a>
+</p>
+
+</div>
+
 
   <div class="block">
   <h2>Social</h2>
