--- a/raven-stormwing/index.html
+++ b/raven-stormwing/index.html
@@ -59,7 +59,7 @@
  <div class="links">
    <h2>Media</h2>
  <p>
-  <a href="https://open.spotify.com/artist/5E11DE3W7Qp8j7Owg8p3R?si=It-jsDMZTse7detR-buWlA" target="_blank">
+  <a href="https://open.spotify.com/artist/5E1lDE3W7Qp8ij7Owg8p3R?si=f437A5wsRh6_o_NHTgzfrw"_blank">
     🎵 Spotify
   </a> |
   <a href="https://www.youtube.com/@RavenStormwing/videos" target="_blank">
